--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.3.*",
         "symfony/runtime": "5.3.*",
-        "symfony/yaml": "5.3.*"
-    },
-    "require-dev": {
+        "symfony/twig-bundle": "5.3.*",
+        "symfony/yaml": "5.3.*",
+        "twig/twig": "^3.0"
     },
     "config": {
         "optimize-autoloader": true,
