changes in custom.js and twig files

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -27,4 +27,4 @@ updateUser:
 deleteUser:
    path: /users/delete/{id}
    controller: App\Controller\UsersController::deleteUser
-   methods: DELETE
+   methods: GET
