login/logout with fresh table

--- a/.env
+++ b/.env
@@ -26,3 +26,20 @@ APP_SECRET=8736f47ee89a1adbad943ee65661b358
 DATABASE_URL="mysql://root:123456@localhost:3306/pilot"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN=sendmail://default
+###< symfony/mailer ###
+
+###> symfony/mailgun-mailer ###
+# MAILER_DSN=mailgun://KEY:DOMAIN@default?region=us
+# MAILER_DSN=mailgun+smtp://USERNAME:PASSWORD@default?region=us
+###< symfony/mailgun-mailer ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+# MAILER_URL=null://localhost
+# MAILER_URL=sendmail://default
+###< symfony/swiftmailer-bundle ###
