--- a/composer.json
+++ b/composer.json
@@ -13,20 +13,26 @@
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.9",
         "symfony/asset": "5.3.*",
+        "symfony/config": "5.3.*",
         "symfony/console": "5.3.*",
         "symfony/dotenv": "5.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.3.*",
         "symfony/framework-bundle": "5.3.*",
+        "symfony/mailer": "5.3.*",
+        "symfony/mailgun-mailer": "5.3.*",
+        "symfony/mime": "5.3.*",
         "symfony/monolog-bundle": "^3.7",
         "symfony/property-access": "5.3.*",
         "symfony/proxy-manager-bridge": "5.3.*",
         "symfony/runtime": "5.3.*",
         "symfony/security-bundle": "5.3.*",
         "symfony/security-csrf": "5.3.*",
+        "symfony/swiftmailer-bundle": "^3.5",
         "symfony/twig-bundle": "5.3.*",
         "symfony/validator": "5.3.*",
         "symfony/yaml": "5.3.*",
+        "symfonycasts/verify-email-bundle": "^1.5",
         "twig/twig": "^3.0"
     },
     "config": {
@@ -73,6 +79,7 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "symfony/maker-bundle": "^1.33"
     }
 }
