--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,32 +1,30 @@
 security:
-    encoders:
-        App\Entity\Users:
-            algorithm: auto
     # https://symfony.com/doc/current/security/experimental_authenticators.html
     enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#c-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+        App\Entity\User:
+            algorithm: auto
+
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        users_in_memory: { memory: null }
         # used to reload user from session & other features (e.g. switch_user)
-        users:
+        app_user_provider:
             entity:
-                # the class of the entity that represents users
-                class: App\Entity\Users
-                # the property to query by - e.g. username, email, etc
-                property: username
+                class: App\Entity\User
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: users_in_memory
-            custom_authenticator: App\Security\AppCustomAuthenticator
+            custom_authenticator: App\Security\LoginControllerAuthenticator
             logout:
                 path: app_logout
+                # where to redirect after logout
+                # target: app_any_route
                 # where to redirect after logout
                 # target: app_any_route
 
