--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ DATABASE_URL="mysql://root:123456@localhost:3306/pilot"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=sendmail://default
+MAILER_DSN=gmail://varinder@smartshore.nl:lhvxfymimmzfsejy@localhost
 ###< symfony/mailer ###
 
 ###> symfony/mailgun-mailer ###
@@ -43,3 +43,8 @@ MAILER_DSN=sendmail://default
 # MAILER_URL=null://localhost
 # MAILER_URL=sendmail://default
 ###< symfony/swiftmailer-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
