--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.3.*",
         "symfony/framework-bundle": "5.3.*",
+        "symfony/google-mailer": "5.3.*",
         "symfony/mailer": "5.3.*",
         "symfony/mailgun-mailer": "5.3.*",
         "symfony/mime": "5.3.*",
