--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,6 @@
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.9",
-        "symfony/asset": "5.3.*",
         "symfony/config": "5.3.*",
         "symfony/console": "5.3.*",
         "symfony/dotenv": "5.3.*",
@@ -32,6 +31,7 @@
         "symfony/swiftmailer-bundle": "^3.5",
         "symfony/twig-bundle": "5.3.*",
         "symfony/validator": "5.3.*",
+        "symfony/webpack-encore-bundle": "^1.12",
         "symfony/yaml": "5.3.*",
         "twig/twig": "^3.0"
     },
