--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
-    "bootstrap": "^5.1.0"
+    "@symfony/stimulus-bridge": "^2.0.0",
+    "@symfony/webpack-encore": "^1.5.0",
+    "bootstrap": "^5.1.0",
+    "stimulus": "^2.0.0",
+    "webpack-notifier": "^1.6.0"
   }
 }
