--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,6 +18,7 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        
         main:
             lazy: true
             user_checker: App\Security\UserChecker
@@ -25,7 +26,7 @@ security:
             logout:
                 path: app_logout
                 # where to redirect after logout
-                # target: app_any_route
+                target: app_login
                 # where to redirect after logout
                 # target: app_any_route
 
@@ -40,3 +41,4 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
          - { path: ^/users, roles: IS_AUTHENTICATED_FULLY }
+         - { path: ^/index, roles: IS_AUTHENTICATED_FULLY }
