setup in windows

--- a/config/packages/validator.yaml
+++ b/config/packages/validator.yaml
@@ -4,11 +4,11 @@ framework:
 
         # Enables validator auto-mapping support.
         # For instance, basic validation constraints will be inferred from Doctrine's metadata.
-        auto_mapping:
-            App\Entity\Lists:
-                properties:
-                    list_name:
-                        - NotBlank: ~
-                        - Regex: 
-                            pattern: '/^[A-Za-z0-9 _]*[A-Za-z0-9][A-Za-z0-9 _]*$/'
-                            message: You are not allowed to enter special charaters
+        # auto_mapping:
+        #     App\Entity\Lists:
+        #         properties:
+        #             list_name:
+        #                 - NotBlank: ~
+        #                 - Regex: 
+        #                     pattern: '/^[A-Za-z0-9 _]*[A-Za-z0-9][A-Za-z0-9 _]*$/'
+        #                     message: You are not allowed to enter special charaters
