--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 ###> symfony/framework-bundle ###
-/.env.local
+/.env
 /.env.local.php
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
@@ -12,7 +12,8 @@ node_modules
 
 ###> symfony/webpack-encore-bundle ###
 /node_modules/
-/public/build/
+!/public/build/
+!/public/build/*
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
