--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -4,8 +4,7 @@ framework:
     #csrf_protection: true
     csrf_protection: ~
     http_method_override: false
-    # validation:
-    #     enabled: true
+    validation: { enable_annotations: true }
 
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
