--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "symfony/mailgun-mailer": "5.3.*",
         "symfony/mime": "5.3.*",
         "symfony/monolog-bundle": "^3.7",
+        "symfony/password-hasher": "5.3.*",
         "symfony/property-access": "5.3.*",
         "symfony/proxy-manager-bridge": "5.3.*",
         "symfony/runtime": "5.3.*",
