--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "symfony/security-bundle": "5.3.*",
         "symfony/security-csrf": "5.3.*",
         "symfony/swiftmailer-bundle": "^3.5",
+        "symfony/translation": "5.3.*",
         "symfony/twig-bundle": "5.3.*",
         "symfony/validator": "5.3.*",
         "symfony/webpack-encore-bundle": "^1.12",
