--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/form": "5.3.*",
         "symfony/framework-bundle": "5.3.*",
         "symfony/google-mailer": "5.3.*",
+        "symfony/intl": "5.3.*",
         "symfony/mailer": "5.3.*",
         "symfony/mailgun-mailer": "5.3.*",
         "symfony/mime": "5.3.*",
