--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.9",
+        "phpoffice/phpspreadsheet": "^1.18",
         "symfony/asset": "5.3.*",
         "symfony/config": "5.3.*",
         "symfony/console": "5.3.*",
