--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.9",
         "phpoffice/phpspreadsheet": "^1.18",
+        "sensiolabs/security-checker": "^6.0",
         "symfony/asset": "5.3.*",
         "symfony/config": "5.3.*",
         "symfony/console": "5.3.*",
@@ -38,6 +39,7 @@
         "symfony/validator": "5.3.*",
         "symfony/webpack-encore-bundle": "^1.12",
         "symfony/yaml": "5.3.*",
+        "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^3.0"
     },
     "config": {
@@ -65,7 +67,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "security-checker security:check": "script"
         },
         "post-install-cmd": [
             "@auto-scripts"
